Add Level 4 Task 2

--- a/level1/LogicaApp/app/src/main/res/layout/activity_main.xml
+++ b/level1/LogicaApp/app/src/main/res/layout/activity_main.xml
@@ -72,6 +72,8 @@
             android:id="@+id/inputResultTT"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:digits="TFtf"
+            android:maxLength="1"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/headerTTB"
             app:layout_constraintBottom_toTopOf="@id/inputResultTF"
@@ -102,6 +104,8 @@
             android:id="@+id/inputResultTF"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:digits="TFtf"
+            android:maxLength="1"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/headerTFB"
             app:layout_constraintBottom_toTopOf="@id/inputResultFT"
@@ -132,6 +136,8 @@
             android:id="@+id/inputResultFT"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:digits="TFtf"
+            android:maxLength="1"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/headerFTB"
             app:layout_constraintBottom_toTopOf="@id/inputResultFF"
@@ -162,6 +168,8 @@
             android:id="@+id/inputResultFF"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:digits="TFtf"
+            android:maxLength="1"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/headerFFB"
             app:layout_constraintBottom_toTopOf="@id/buttonSubmit"
